ktp-text-ui (0.8.80-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Update libtelepathy-qt build-dep to 0.9.5
  * Update libktpcommoninternalsprivate-dev build-dep to 0.8.80
  * Update libtelepathy-logger-qt build-dep to 0.8.0
  * Change kde-telepathy-data dependency to source:Upstream-Version

 -- Diane Trout <diane@ghic.org>  Sun, 21 Sep 2014 11:01:08 -0700

ktp-text-ui (0.8.1-1) unstable; urgency=low

  * New upstream release
  * Update Standards-Version to 3.9.5. No changes needed.
  * Bump ktp-common-internals and kde-telepath-data dependencies to 0.8.1
  * Remove 04_no_require_x11.patch
  * Update debian/copyright

 -- Diane Trout <diane@ghic.org>  Fri, 16 May 2014 21:06:46 -0700

ktp-text-ui (0.7.0-1) unstable; urgency=low

  * New upstream release.
  * Add libqjson-dev Build-Depends.
  * Add 04_no_require_x11.patch from upstream
  * Bump ktp-common-internals and kde-telepath-data dependencies to 0.7.0

 -- Diane Trout <diane@ghic.org>  Wed, 27 Nov 2013 18:16:56 -0800

ktp-text-ui (0.6.3-1) unstable; urgency=low

  [ Ritesh Raj Sarraf ]
  * [e26f6a8] drop patch 03_no_redundant_glib_calls.diff
  * [459ee64] Drop tests, for now, as they are failing

  [ Diane Trout ]
  * Update watch file as KDE-Telepathy is now in stable release.
  * Bump ktp-common-internals version
  * Plasma-widget-telpathy-chat was moved to ktp-desktop-applet
  * Add telepathy-logger dependency
  * Imported Upstream version 0.6.2.1
  * Refresh patches
  * Bump ktp-common-internal dependency
  * Set Uploaders to Diane Trout and Michał Zając
  * Update to Standards-Version 3.9.4. No changes needed.
  * Add several plugins to kde-telepathy-text-ui.install
  * Add description to 02_ktpchat_soversion.diff
  * Merge libktpchat0 into ktp-telepathy-text-ui.
  * Override lintian warnings about the libktpchat0 library.

  [ Mark Purcell ] 
  * Imported Upstream version 0.6.3
  * Add myself to Uploaders
  * Update Build-Depends: libktpcommoninternalsprivate-dev (>= 0.6.3)
