@@ -1,0 +1,26 @@
+/usr/share/applications/kde4/ktp-log-viewer.desktop
+usr/share/dbus-1/services/org.freedesktop.Telepathy.Client.KTp.TextUi.service
+usr/share/kde4/apps/ktelepathy/Template.html
+usr/share/kde4/apps/ktelepathy/styles/*
+usr/share/kde4/apps/ktelepathy/longurlServices.json
+usr/share/kde4/apps/ktelepathy/*.js
+usr/share/kde4/apps/ktp-log-viewer/log-viewer.rc
+usr/share/kde4/apps/ktp-text-ui/chatwindow.rc
+usr/share/kde4/servicetypes/ktptxtui*.desktop
+usr/share/kde4/services/adiumxtra.protocol
+usr/share/kde4/services/kcm_ktp*.desktop
+usr/share/kde4/services/ktptextui*.desktop
+usr/share/locale/*/LC_MESSAGES/ktp-adiumxtra-protocol-handler.mo
+usr/share/locale/*/LC_MESSAGES/ktp-text-ui.mo
+usr/share/locale/*/LC_MESSAGES/ktp-filters.mo
+usr/share/locale/*/LC_MESSAGES/kcm_ktp_chat_appearance.mo
+usr/share/locale/*/LC_MESSAGES/ktpchat.mo
+usr/share/locale/*/LC_MESSAGES/kcm_ktp_chat_behavior.mo
+usr/share/telepathy/clients/KTp.TextUi.client
+usr/lib/libktpimagesharer.so
+usr/lib/kde4/kcm_ktp*.so
+usr/lib/kde4/ktptextui*.so
+usr/lib/kde4/libexec/ktp-adiumxtra-protocol-handler
+usr/lib/kde4/libexec/ktp-text-ui
+usr/lib/libktpchat.so.*
+usr/bin/ktp-log-viewer
