@@ -5,6 +5,8 @@ ktp-text-ui (0.8.80-1) UNRELEASED; urgency=medium
   * Update libktpcommoninternalsprivate-dev build-dep to 0.8.80
   * Update libtelepathy-logger-qt build-dep to 0.8.0
   * Change kde-telepathy-data dependency to source:Upstream-Version
+  * Change to using .install file and default dh_auto_install behavior
+    - this maeks dh_install --list-missing more reliable.
 
  -- Diane Trout <diane@ghic.org>  Sun, 21 Sep 2014 11:01:08 -0700
 
